tests/baselines/reference/constructorNameInGenerator.errors.txt
constructorNameInGenerator.ts(2,6): error TS1368: Class constructor may not be a generator.


==== constructorNameInGenerator.ts (1 errors) ====
    class C2 {
        *constructor() {}
         ~~~~~~~~~~~
!!! error TS1368: Class constructor may not be a generator.
    }
    